@@ -65,6 +65,8 @@
     <Compile Include="Expressions\BaseExpression.cs" />
     <Compile Include="Expressions\BinaryExpression.cs" />
     <Compile Include="Expressions\ConstantExpression.cs" />
+    <Compile Include="Expressions\DivideExpression.cs" />
+    <Compile Include="Expressions\MultiplyExpression.cs" />
     <Compile Include="Expressions\ExpressionUtilities.cs" />
     <Compile Include="Expressions\NameExpression.cs" />
     <Compile Include="Expressions\SubtractExpression.cs" />
